# cpp-kg-viewer

./: .gitignore  CMakeLists.txt  GraphVisualizer  README.md  kg.json
examples/: test_graph.csv  test_graph.json
src/: main.cpp
src/core/: algorithms.cpp  algorithms.hpp  graph.cpp  graph.hpp  parallel.cpp  parallel.hpp
src/io/: loader.cpp  loader.hpp
src/visualization/: layout.cpp  layout.hpp  renderer.cpp  renderer.hpp
